<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idArea" />
        <EditText
            android:id="@+id/editidArea"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/maximopersonas" />
        <EditText
            android:id="@+id/editmaximopersonas"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombrearea" />
        <EditText
            android:id="@+id/editnombrearea"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcionarea" />
        <EditText
            android:id="@+id/editDescripcionarea"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarArea"
            android:text="@string/actualizarJ" />

        <Button
            android:onClick="limpiarAA"
            android:text="@string/limpiarJ" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="actualizarAreaWeb"
            android:text="actualizar localhost" />
    </TableRow>
</TableLayout>
