<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/administrador"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/GestionarAdministrador" />
        <item
            android:id="@+id/solicitante"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/GestionarSolicitante" />
        <item
            android:id="@+id/solicitud"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/GestionarSolicitud" />
        <item
            android:id="@+id/actividad"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/GestionarActividad" />
        <!--
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
            -->
    </group>

    <item android:title="@string/otroGrupo">
        <menu>
            <item
                android:id="@+id/cerrarSesionAdmin"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/cerrarSesion" />
        </menu>
    </item>

</menu>
