<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/solicitudUsuarioCrear"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/CrearSolicitudUsuario" />
        <item
            android:id="@+id/solicitudUsuarioVer"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/VerSolicitudesUsuario" />
    </group>

    <item android:title="@string/Comunicacion">
        <menu>
            <item
                android:id="@+id/cerrarSesionUsuario"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/cerrarSesion" />
        </menu>
    </item>

</menu>
