<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="poliues.eisi.fia.edu.sv.poliues.PrincipalUsuario"
    tools:showIn="@layout/app_bar_principal_usuario">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/presentacion"
            android:text="BIENVENIDO"
            android:textSize="25sp"
            android:gravity="center"
            android:typeface="serif"
            android:textStyle="italic"
            android:textColor="#883030"
            />


        <TextView android:text=""
            android:layout_marginTop="30dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

        <ImageView
            android:id="@+id/ImagenUsuario"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:scaleType="fitStart"
            android:src="@drawable/complejo"

            />
        <TextView android:text=""
            android:layout_marginTop="0.3dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Instrucciones"
            android:textSize="20sp"
            android:gravity="center"
            android:typeface="serif"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto1"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto2"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto3"
            android:textSize="12sp"
            />
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto4"
        android:textSize="12sp"
        />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto5"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto6"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto7"
            android:textSize="12sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto8"
            android:textSize="12sp"
            />

    </LinearLayout>


</ScrollView>

