<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="poliues.eisi.fia.edu.sv.poliues.TarifaActualizarActivity"
    tools:showIn="@layout/app_bar_tarifa_actualizar">

    <TableRow>
        <TextView android:text="@string/cantPersonas" />
        <EditText
            android:id="@+id/editCantPersonas"
            android:inputType="number"
            android:maxLength="5" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/tarifaUnitaria" />
        <EditText
            android:id="@+id/editTarifaUnitaria"
            android:inputType="numberDecimal"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarTarifa"
            android:text="@string/actualizar_registro" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>


    <TableRow>
        <Button
            android:onClick="actualizarTarifaWeb"
            android:text="Actuailizar localhost" />
    </TableRow>

</TableLayout>
