<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dip"
        android:stretchColumns="1" >

        <TableRow>
            <TextView android:text="@string/area"/>
            <Spinner
                android:id="@+id/SpinnerArea"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:prompt="@string/area"
                />
        </TableRow>

        <TextView android:text=""
            android:layout_marginTop="20dip"/>

        <TableRow>

            <Button
                android:id="@+id/pickDateInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FechaDeInicio"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/dateDisplayInicio"
                android:text=""
                />

        </TableRow>

        <TextView android:text=""
            android:layout_marginTop="20dip"/>

        <TableRow>

            <Button
                android:id="@+id/pickDateFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FechaDeFinalizacion"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/dateDisplayFin"
                android:text=""
                />

        </TableRow>

        <TextView android:text=""
            android:layout_marginTop="20dip"/>

        <TableRow>
            <TextView android:text="@string/opcionesSO" />
        </TableRow>

        <TableRow>
            <Button
                android:onClick="insertarDetalleSolicitud"
                android:text="@string/insertar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

    </TableLayout>



</ScrollView>